# DaO_simulation

./: LICENSE  README.md  alt_err.py  dao.R  dao.py
daosim/: LICENSE  README.md  pyproject.toml
daosim/src/daosim/: __init__.py
example/: simulation_study.py  translate.py
paper_sims/dao/exp/: data_1000_100_10_0_0_0.txt  data_1000_100_10_0_0_13.txt  data_1000_100_10_0_0_18.txt  data_1000_100_10_0_1_10.txt  data_1000_100_10_0_1_15.txt  data_1000_100_10_0_1_16.txt  data_1000_100_10_0_1_19.txt  data_1000_100_10_0_1_8.txt  data_1000_100_10_1_0_5.txt  data_1000_100_10_1_0_7.txt  data_1000_100_10_1_0_9.txt  data_1000_20_10_0_0_18.txt  data_1000_20_10_0_0_2.txt  data_1000_20_10_0_0_4.txt  data_1000_20_10_0_0_8.txt  data_1000_20_10_0_1_10.txt  data_1000_20_10_0_1_15.txt  data_1000_20_10_0_1_16.txt  data_1000_20_10_0_1_18.txt  data_1000_20_10_0_1_19.txt  data_1000_20_10_0_1_6.txt  data_1000_20_10_0_1_8.txt  data_1000_20_10_1_0_1.txt  data_1000_20_10_1_0_10.txt  data_1000_20_10_1_0_13.txt  data_1000_20_10_1_0_14.txt  data_1000_20_10_1_0_18.txt  data_1000_20_10_1_0_3.txt  data_1000_20_10_1_0_6.txt  data_1500_100_10_0_0_15.txt  data_1500_100_10_0_0_19.txt  data_1500_100_10_0_0_3.txt  data_1500_100_10_0_0_6.txt  data_1500_100_10_0_1_10.txt  data_1500_100_10_0_1_13.txt  data_1500_100_10_0_1_16.txt  data_1500_100_10_0_1_19.txt  data_1500_100_10_0_1_2.txt  data_1500_100_10_0_1_3.txt  data_1500_100_10_0_1_4.txt  (+178 more)
paper_sims/dao/gaus/: data_1000_100_10_0_0_10.txt  data_1000_100_10_0_0_17.txt  data_1000_100_10_0_0_19.txt  data_1000_100_10_0_0_2.txt  data_1000_100_10_0_0_7.txt  (+204 more)
(+2343 files in other folders)
