[project]
name = "daosim"
version = "0.0.4"
authors = [
  { name = "Bryan Andrews", email = "andr1017@umn.edu" },
]
description = "The DAG adaptation of the Onion method"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/bja43/DaO_simulation"
Issues = "https://github.com/bja43/DaO_simulation"
